--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,7 +55,7 @@ jobs:
         run: |
           curl -L https://github.com/probonopd/uploadtool/raw/master/upload.sh --output upload.sh
           mv target/${{ matrix.target }}/release/kyuun kyuun
-          tar -cavf kyuun-${VERSION}-${{ matrix.target }}.tar.gz kyuun CHANGELOG.md README.md LICENSE
+          tar -cavf kyuun-${VERSION}-${{ matrix.target }}.tar.gz kyuun README.md LICENSE
           bash upload.sh kyuun-${VERSION}-${{ matrix.target }}.tar.gz
 
       - name: Rename files (Windows)
