🔨 chore: cargo update

--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -13,4 +13,4 @@ jobs:
         with:
           key: "clippy"
       - name: "run clippy"
-        run: "cargo clippy --locked -- -D warnings"
+        run: "cargo clippy -- -D warnings"
