--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,20 +8,21 @@ repository = "https://github.com/fawni/kyuun"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.27.0", features = ["full"] }
-reqwest = { version = "0.11.16", features = ["json"] }
+tokio = { version = "1.28.2", features = ["full"] }
+reqwest = { version = "0.11.18", features = ["json"] }
 
 confy = "0.5.1"
-serde = { version = "1.0.160", features = ["derive"] }
+serde = { version = "1.0.163", features = ["derive"] }
 dialoguer = "0.10.4"
 
-clap = { version = "4.2.4", features = ["derive"] }
-miette = { version = "5.8.0", features = ["fancy"] }
+clap = { version = "4.3.2", features = ["derive"] }
+miette = { version = "5.9.0", features = ["fancy"] }
 owo-colors = "3.5.0"
-chrono = "0.4.24"
+chrono = "0.4.26"
 
-warp = "0.3.4"
-webbrowser = "0.8.9"
+warp = "0.3.5"
+webbrowser = "0.8.10"
+open = "4.1.0"
 
 [profile.release]
 lto = true
